# sierge-poc

./: .gitignore  README.md  langgraph-playground.ipynb  packages.txt  pydantic_data.json  pyproject.toml  pytest.ini  requirements.txt  serpapi-2.json  sierge_streamlit.py  streamlit_app.py  streamlit_helper.py
.devcontainer/: devcontainer.json
agent/: __init__.py  simple_agent.py  tools.py
agents/: activities.py  data_collection_agent.py  geocoding.py  itinerary_agent.py  prompts.py  simpleagent.py  testagent.py  tools.py  vector_agent.py  vector_database.py
integrations/: uule_convertor.py  vector_database.py
mockups/: itinerary-response-1.json  itinerary-response-2.json  pydantic_test.py  serpapi-1.json  serpapi-events-1.json  serpapi-locals-1.json  vector_store.json
tests/: conftest.py  test_tools.py
