[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sierge-poc"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "datasets==3.6.0",
    "dotenv==0.9.9",
    "google-search-results==2.4.2",
    "googlemaps==4.10.0",
    "langchain==0.3.25",
    "langchain-core==0.3.60",
    "langchain-hyperbrowser==0.4.1",
    "langchain-openai==0.3.17",
    "langchain-qdrant==0.2.0",
    "langgraph==0.4.4",
    "pygraphviz==1.14",
    "qdrant-client==1.14.2",
    "semantic-router==0.1.8",
    "serpapi==0.1.5",
    "streamlit==1.45.1",
    "pydantic==2.11.4",
    "pydantic-settings==2.2.1",
    "pyuploadcare",
    "pyppeteer"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-httpx"
]

[tool.setuptools]
packages = ["sierge_poc"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
python_files = "test_*.py"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
